--- a/plugins/android-native/notifications/enumerations.html
+++ b/plugins/android-native/notifications/enumerations.html
@@ -153,37 +153,37 @@
                             <tr>
                                 <td>CHANNEL_IMPORTANCE_NONE</td>
                                 <td>
-                                    XXX
+                                    This does not show in the shade.
                                 </td>
                             </tr>
                             <tr>
                                 <td>CHANNEL_IMPORTANCE_MIN</td>
                                 <td>
-                                    XXX
+                                    This only shows in the shade, below the fold.
                                 </td>
                             </tr>
                             <tr>
                                 <td>CHANNEL_IMPORTANCE_LOW</td>
                                 <td>
-                                    XXX
+                                    This shows in the shade, and potentially in the status bar, but is not audibly intrusive.
                                 </td>
                             </tr>
                             <tr>
                                 <td>CHANNEL_IMPORTANCE_DEFAULT</td>
                                 <td>
-                                    XXX
+                                    This shows everywhere, makes noise, but does not visually intrude.
                                 </td>
                             </tr>
                             <tr>
                                 <td>CHANNEL_IMPORTANCE_HIGH</td>
                                 <td>
-                                    XXX
+                                    This shows everywhere, makes noise and peeks. May use full screen intents.
                                 </td>
                             </tr>
                             <tr>
                                 <td>CHANNEL_IMPORTANCE_MAX</td>
                                 <td>
-                                    XXX
+                                    Currently, this is unused.
                                 </td>
                             </tr>
                         </tbody>
@@ -205,13 +205,13 @@
                             <tr>
                                 <td>APPLICATION_LAUNCH</td>
                                 <td>
-                                    XXX
+                                    The application's reaction to tapping on a notifcation will launch your application.
                                 </td>
                             </tr>
                             <tr>
                                 <td>BACKGROUND</td>
                                 <td>
-                                    XXX
+                                    The application's reaction to tapping on a notification will save the data for later collection and not launch your application.
                                 </td>
                             </tr>
                         </tbody>
@@ -233,25 +233,19 @@
                             <tr>
                                 <td>VISIBILITY_SECRET</td>
                                 <td>
-                                    XXX
+                                    Do not reveal any part of the notification on a secure lockscreen.
                                 </td>
                             </tr>
                             <tr>
                                 <td>VISIBILITY_PRIVATE</td>
                                 <td>
-                                    XXX
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>REPORTING_MODE_ONE_SHOT</td>
-                                <td>
-                                    Events are reported in one-shot mode,
+                                    Shows the notification on all lockscreens, but conceal sensitive or private information on secure lockscreens.
                                 </td>
                             </tr>
                             <tr>
                                 <td>VISIBILITY_PUBLIC</td>
                                 <td>
-                                    XXX
+                                    Shows the notification in its entirety on all lockscreens.
                                 </td>
                             </tr>
                         </tbody>
