update Advanced Notifications to Android Notifications

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="card text-center card-custom lavender">
               <img class="new-tag" alt='New!' src='images/NewTag.png' />
               <div class="card-header card-header-custom">
-                <h5 style="margin-bottom: 0;">Advanced Notifications</h5>
+                <h5 style="margin-bottom: 0;">Android Notifications</h5>
               </div>
               <img src="images/AndroidNotifications/AndroidNotification_Feature_Image.png" alt="...">
               <div class="card-body card-body-custom">
