fix: update png formatting

--- a/plugins/android-native/sensors/supporting_nodes.html
+++ b/plugins/android-native/sensors/supporting_nodes.html
@@ -521,7 +521,7 @@
                 <div class="container"
                     style="margin-left: 0px; padding-left: 0px; padding-top: 1px; padding-bottom: 1px;">
                     <div style="display: flex; justify-content: center; align-items: center;">
-                        <img src="../../../images/AndroidSensors/Example_Android_Sensors_Get_TN_Orientation.PNG"
+                        <img src="../../../images/AndroidSensors/Example_Android_Sensors_Get_TN_Orientation.png"
                             style="max-width: 95%;" data-toggle="modal" data-target="#Modal1">
                     </div>
                 </div>
@@ -531,7 +531,7 @@
                         <div id="modalBody1">
                             <div class="modal-body">
                                 <img id="modal1-image"
-                                    src="../../../images/AndroidSensors/Example_Android_Sensors_Get_TN_Orientation.PNG"
+                                    src="../../../images/AndroidSensors/Example_Android_Sensors_Get_TN_Orientation.png"
                                     alt="Your Image">
                             </div>
                         </div>
