plugin updates news

--- a/plugins/release/notes/advanced_ads_pro.html
+++ b/plugins/release/notes/advanced_ads_pro.html
@@ -121,6 +121,72 @@
                                         <img class="news-badge" src="../../../images/Admob/Admob_Plugin_Logo.png">
                                     </div>
                                     <div class="col-9" style="padding-left: 10px">
+                                        <div class="news-title">Stability Release</div>
+                                        <div class="news-sub-title">2024-05-07</div>
+                                    </div>
+                                    <div class="col text-right" style="padding-left: 10px">
+                                        <div class="news-title">v1.0.4</div>
+                                    </div>
+                                </div>
+                            </div>
+                    
+                            <div class="news-info">
+                                <div class="row">
+                                    <div class="col-auto" style="display:flex; align-items: center; margin: 0">
+                                        <div class="news-info-details" style="font-weight: 500">
+                                            <ul>
+                                                <li>Updated Consent Delegates to run on Game Thread</li>
+                                                <li>Update InMobi Mediation Libraries</li>
+                                                <li>Remove Lingering Google Game Services dependencies</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div style="padding: 10px"></div>
+                    <div class="news-card expanded">
+                        <div class="news-container">
+                            <div class="news-group-item">
+                                <div class="row">
+                                    <div class="col-auto" style="padding-right: 0">
+                                        <img class="news-badge" src="../../../images/Admob/Admob_Plugin_Logo.png">
+                                    </div>
+                                    <div class="col-9" style="padding-left: 10px">
+                                        <div class="news-title">Stability Release</div>
+                                        <div class="news-sub-title">2024-05-04</div>
+                                    </div>
+                                    <div class="col text-right" style="padding-left: 10px">
+                                        <div class="news-title">v1.0.3</div>
+                                    </div>
+                                </div>
+                            </div>
+                    
+                            <div class="news-info">
+                                <div class="row">
+                                    <div class="col-auto" style="display:flex; align-items: center; margin: 0">
+                                        <div class="news-info-details" style="font-weight: 500">
+                                            <ul>
+                                                <li>Google/Admob has removed mediation partners</li>
+                                                <li>Yahoo (Verizon Media) mediation partner removed</li>
+                                                <li>Tapjoy mediation partner removed</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div style="padding: 10px"></div>
+                    <div class="news-card expanded">
+                        <div class="news-container">
+                            <div class="news-group-item">
+                                <div class="row">
+                                    <div class="col-auto" style="padding-right: 0">
+                                        <img class="news-badge" src="../../../images/Admob/Admob_Plugin_Logo.png">
+                                    </div>
+                                    <div class="col-9" style="padding-left: 10px">
                                         <div class="news-title">Pending Release Alert</div>
                                         <div class="news-sub-title">2024-05-01</div>
                                     </div>
