--- a/plugins/release/notes/play_events.html
+++ b/plugins/release/notes/play_events.html
@@ -120,6 +120,39 @@
                                         <img class="news-badge" src="../../../images/Events/GooglePlay_Events_Plugin_Logo.png">
                                     </div>
                                     <div class="col-9" style="padding-left: 10px">
+                                        <div class="news-title">Stability Release</div>
+                                        <div class="news-sub-title">2024-05-07</div>
+                                    </div>
+                                    <div class="col text-right" style="padding-left: 10px">
+                                        <div class="news-title">v1.2.1</div>
+                                    </div>
+                                </div>
+                            </div>
+                    
+                            <div class="news-info">
+                                <div class="row">
+                                    <div class="col-auto" style="display:flex; align-items: center; margin: 0">
+                                        <div class="news-info-details" style="font-weight: 500">
+                                            <ul>
+                                                <li>Update to detect Advanced Ads Pro Plugin</li>
+                                                <li>Update to handle when Ads plugin is present, but no Play Base Services V2 Plugin</li>
+                                                <li>Disables with Ads Plugin and no Play Base Services V2 Plugin</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div style="padding: 10px"></div>
+                    <div class="news-card expanded">
+                        <div class="news-container">
+                            <div class="news-group-item">
+                                <div class="row">
+                                    <div class="col-auto" style="padding-right: 0">
+                                        <img class="news-badge" src="../../../images/Events/GooglePlay_Events_Plugin_Logo.png">
+                                    </div>
+                                    <div class="col-9" style="padding-left: 10px">
                                         <div class="news-title">Feature Release</div>
                                         <div class="news-sub-title">2024-02-02</div>
                                     </div>
@@ -184,7 +217,7 @@
                     </div>
                 </div>
             </main>
-            <div style="margin-bottom: 700px">
+            <div style="margin-bottom: 800px">
             </div>
         </div>
     </div>
