update admob docs and release notes

--- a/plugins/advertising/admob/getting_started.html
+++ b/plugins/advertising/admob/getting_started.html
@@ -154,6 +154,12 @@
                                 </div>
                             </div>
                             <li class="list-group-item">
+                                Install at least java 11
+                            </li>
+                            <p class="content" style="padding-top: 10px; padding-left: 10px">
+                                Ensure you have at least java 11 installed on your machine.
+                            </p>
+                            <li class="list-group-item">
                                 Setup your Admob Account
                             </li>
                             <p class="content" style="padding-top: 10px; padding-left: 10px">
@@ -197,15 +203,15 @@
                                 </div>
                             </div>
                             <li class="list-group-item">
-                                Target Android API-34
+                                Package with Android API-34
                             </li>
                             <p class="content" style="padding-top: 10px; padding-left: 10px">
-                                In your Unreal Engine Editor, go to <span style="font-weight: 500;">Project Settings</span> -> <span style="font-weight: 500;">Platforms</span> -> <span style="font-weight: 500;">Android</span> 
-                                in the Project Settings left navigation bar. Under <span style="font-weight: 500;">APK Packaging</span> at the top, go to the field "<span style="font-weight: 500;">Target SDK Version</span>" and put in "<span style="font-weight: 500;">34</span>" or greater.
+                                In your Unreal Engine Editor, go to <span style="font-weight: 500;">Project Settings</span> -> <span style="font-weight: 500;">Platforms</span> -> <span style="font-weight: 500;">Android SDK</span> 
+                                in the Project Settings left navigation bar. Under <span style="font-weight: 500;">SDKConfig</span>, go to the field "<span style="font-weight: 500;">SDK API Level</span>" and put in "<span style="font-weight: 500;">android-34</span>" or greater.
                             </p>
                             <div class="container" style="margin-left: 0px; padding-left: 0px; padding-bottom: 40px;">
                                 <div style="display: flex; justify-content: center; align-items: center;">
-                                    <img style="max-width: 90%" src="../../../images/Admob/UpdateAndroidTargetAPI.png">
+                                    <img style="max-width: 90%" src="../../../images/Admob/UpdateAndroidSDKTargetAPI.png">
                                 </div>
                             </div>
                             
