--- a/plugins/release/notes/advanced_ads_pro.html
+++ b/plugins/release/notes/advanced_ads_pro.html
@@ -111,8 +111,47 @@
                     style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
                     <h1 class="h2 text-white-shadow">Advanced Admob Ads</h1>
                 </div>
-                
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
+                    <div class="news-card expanded">
+                        <div class="news-container">
+                            <div class="news-group-item">
+                                <div class="row">
+                                    <div class="col-auto" style="padding-right: 0">
+                                        <img class="news-badge" src="../../../images/Admob/Admob_Plugin_Logo.png">
+                                    </div>
+                                    <div class="col-9" style="padding-left: 10px">
+                                        <div class="news-title">Stability Release</div>
+                                        <div class="news-sub-title">2024-05-13</div>
+                                    </div>
+                                    <div class="col text-right" style="padding-left: 10px">
+                                        <div class="news-title">v1.0.5</div>
+                                    </div>
+                                </div>
+                            </div>
+                    
+                            <div class="news-info">
+                                <div class="row">
+                                    <div class="col-auto" style="display:flex; align-items: center; margin: 0">
+                                        <div class="news-info-details" style="font-weight: 500">
+                                            <ul>
+                                                <li>
+                                                    Refactor Banner Ads to use FrameLayout's instead of PopupWindow's
+                                                    <ul>
+                                                        <li>PopupWindow's can have device styling impacting banner ad positioning</li>
+                                                        <li>FrameLayout styling is more consistant across devices</li>
+                                                    </ul>
+                                                </li>
+                                                <li>Fixed an issue when an AppOpen ad fails to load and you attempt to display it anyways</li>
+                                                <li>Fixed an issue when the Context Switch App Open ad fails to load</li>
+                                                <li>Fixed an issue when acquiring GDPR consent fails</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div style="padding: 10px"></div> 
                     <div class="news-card expanded">
                         <div class="news-container">
                             <div class="news-group-item">
